@@ -3,6 +3,8 @@ Changes made from the "0.7.1" release to the "0.7.2" release:
 
 * Bertrand Coconnier:
 
+- Fixed a bug which did not include trailing spaces in the calculation of
+  bounding boxes.
 - Fixed a bug which caused artifacts when rendering glyphes that extend beyond
   the EM square.
 - Fixed a bug which prevented letters l and i to be displayed at small scales
